[project]
name = "stylegan2-ada-pytorch"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "click>=8.1.8",
    "imageio-ffmpeg==0.4.3",
    "ninja>=1.13.0",
    "pillow>=10.4.0",
    "psutil>=7.1.3",
    "pyspng>=0.1.4",
    "requests>=2.32.4",
    "scipy>=1.10.1",
    "setuptools>=75.3.2",
    "torch==1.13.1",
    "tqdm>=4.67.1",
]
